--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ h6,
 }
 .navbar-dark .navbar-toggler {
   color: var(--primary) !important;
-  border-color: var(--primary) !important;
+  /* border-color: var(--primary) !important; */
 }
 
 @media (max-width: 991.98px) {
@@ -487,7 +487,7 @@ h6,
 @media (min-width: 991.98px) {
   .facts {
     position: relative;
-    margin-top: -25px;
+    margin-top: 25px;
     z-index: 1;
   }
 }
