--- a/css/style.css
+++ b/css/style.css
@@ -360,8 +360,13 @@ h6,
 
 .services .img img {
   transition: 0.6s;
+  height: 180px;
+  width: 390px;
 }
-
+.serviceimg {
+  /* height: 320px; */
+  /* width: 180px; */
+}
 .services .details {
   padding: 50px 30px;
   margin: -100px 30px 0 30px;
